Segunda update del integrador

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav>
       <ul class="nav_links">
         <li><a href="#">Inicio</a></li>
-        <li><a href="#">Acerca de</a></li>
-        <li><a href="#">Contactar</a></li>
+        <li><a href="./about.html">Acerca de</a></li>
+        <li><a href="./contacto.html">Contactar</a></li>
       </ul>
     </nav>
 
@@ -75,123 +75,21 @@
 </nav>
   </header> 
 
-
-
-
-
-  
-
-
-
-  <!-- Barra de búsqueda -->
-
-  <div class="container">
-      <input type="text" placeholder="Buscar productos" id="search-box">
-      <i id="iconoBusqueda" class="fa-solid fa-magnifying-glass"></i>
-
-  <!-- Contendor de productos -->
-      <div id="botonesFiltro">
-        <button class="button-value" onclick="filtroBotones('mostrarTodo')">Mostrar todo</button>
-        <button class="button-value" onclick="filtroBotones('menorPrecio')">Menor precio</button>
-        <button id="button-value" onclick="filtroBotones('mayorPrecio')">Mayor precio</button>
-        <button id="button-value" onclick="filtroBotones('ofertas')">Ofertas</button>
-        <button id="button-value" onclick="filtroBotones('juegazos')">Juegos</button>
-        <button id="button-value" onclick="filtroBotones('softwares')">Software</button>
-        <button id="button-value" onclick="filtroBotones('giftcards')">Tarjetas de regalo</button>
-      </div>
-
-      <div class="image-container">
-
-       <div class="image" id="videojuegos">
-          <img src="./assets/prodimgs/eldenring.jpg" alt="">
-          <h3>Elden Ring</h3>
-          <p>$3.999,00</p>
-          <button class="btn btn-small addToCart" data-product-id="2"><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-       </div>
- 
-       <div class="image" data-title="videojuegos">
-          <img src="./assets/prodimgs/ghostwire.jpg" alt="">
-          <h3>Ghostwire: Tokyo</h3>
-          <p>$2.999,00</p>
-          <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-       </div>
- 
-       <div class="image" data-title="videojuegos">
-          <img src="./assets/prodimgs/fifa22.jpg" alt="">
-          <h3>FIFA 22</h3>
-          <p>$4.500,00</p>
-          <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-       </div>
- 
-       <div class="image" data-title="">
-          <img src="./assets/prodimgs/minecraft.jpg" alt="">
-          <h3>Minecraft</h3>
-          <p>$1.500,00</p>
-          <del>$2.000,00</del><span class="discout-box">-25%</span>
-          <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-       </div>
- 
-       <div class="image" data-title="">
-          <img src="./assets/prodimgs/rust.jpg" alt="">
-          <h3>Rust</h3>
-          <p>$2.500,00</p>
-          <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-       </div>
- 
-       <div class="image" data-title="">
-          <img src="./assets/prodimgs/windows10.jpg" alt="">
-          <h3>Microsoft Windows 10 Pro</h3>
-          <p>$3.200,00</p>
-          <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-       </div>
- 
-       <div class="image" data-title="">
-          <img src="./assets/prodimgs/office.jpg" alt="">
-          <h3>Microsoft Office Professional Plus 2021</h3>
-          <p>$2.000,00</p>
-          <del>$6.000,00</del><span class="discout-box">-66,66%</span>
-          <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-       </div>
- 
-       <div class="image" data-title="">
-          <img src="./assets/prodimgs/steamgiftcard.jpg" alt="">
-          <h3>Steam Gift Card 500 ARS</h3>
-          <p>$623,00</p>
-          <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-       </div>
- 
-       <div class="image" data-title="">
-          <img src="./assets/prodimgs/rdr2.jpg" alt="">
-          <h3>Red Dead Redemption 2</h3>
-          <p>$2.500,00</p>
-          <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-       </div>
-
-       <div class="image" data-title="">
-        <img src="./assets/prodimgs/skyrim.jpg" alt="">
-        <h3>The Elders Scrolls V: Skyrim SE</h3>
-        <p>$1.900,00</p>
-        <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-     </div>
-
-     <div class="image" data-title="">
-      <img src="./assets/prodimgs/sekiro.jpg" alt="">
-      <h3>Sekiro™: Shadows Die Twice</h3>
-      <p>$1.300,00</p>
-      <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
+  <div class="wrapper">
+    <div id="search-container">
+      <input type="search" id="search-input" placeholder="Buscar productos"/>
+      <button id="buscarBtn">Buscar</button>
     </div>
-
-    <div class="image" data-title="">
-      <img src="./assets/prodimgs/fo76.jpg" alt="">
-      <h3>Fallout 76</h3>
-      <p>$450,00</p>
-      <del>$1.500,00</del><span class="discout-box">-70%</span>
-      <button><i class="fa-solid fa-cart-plus"></i>Agregar al carro</button>
-   </div>
- 
+    <div id="buttons">
+      <button class="button-value" onclick="filterProduct('Mostrar todo')">Mostrar todo</button>
+      <button class="button-value" onclick="filterProduct('Juegos')">Juegos</button>
+      <button class="button-value" onclick="filterProduct('Software')">Software</button>
+      <button class="button-value" onclick="filterProduct('Ofertas')">Ofertas</button>
+      <button class="button-value" onclick="filterProduct('Tarjetas')">Tarjetas</button>
     </div>
- 
- </div>
+    <div id="products">
+    </div>
+  </div>
 
   <script src="./js/app.js"></script>
   <script src="./js/carrito-compras.js" type="module"></script>
